[package]
name = "arrow-sunny"
version = "0.1.2"
description = "Sunny protocol integration for Arrow."
edition = "2018"
homepage = "https://arrowprotocol.com"
repository = "https://github.com/arrowprotocol/arrow"
authors = ["Oliver Queen <oliver@arrowprotocol.com>"]
license = "AGPL-3.0"
keywords = ["solana", "arrow", "quarry", "sunny", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "arrow_sunny"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.17.0"
anchor-spl = ">=0.17.0"
quarry-mine = { version = "1.10.0", features = ["cpi"] }
quarry-mint-wrapper = { version = "1.10.6", features = ["cpi"] }
sunny-anchor = { version = "0.1.0", path = "../../lib/sunny", features = [
    "cpi"
] }
num-traits = "0.2"
vipers = "1.5.3"
spl-associated-token-account = { version = "1.0.3", features = [
    "no-entrypoint"
] }
