[package]
name = "arrow-sunny"
version = "0.3.1"
description = "Sunny protocol integration for Arrow."
edition = "2021"
homepage = "https://arrowprotocol.com"
repository = "https://github.com/arrowprotocol/arrow"
authors = ["Oliver Queen <oliver@arrowprotocol.com>"]
license = "AGPL-3.0"
keywords = ["solana", "arrow", "quarry", "sunny", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "arrow_sunny"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.24"
anchor-spl = "^0.24"
quarry-mine = { version = "^5", features = ["cpi"] }
quarry-mint-wrapper = { version = "^5", features = ["cpi"] }
static-pubkey = "1.0.3"
sunny-anchor = { version = "0.3.1", path = "./lib/sunny", features = ["cpi"] }
num-traits = "0.2"
vipers = { version = "^2", features = ["spl-associated-token-account"] }
spl-associated-token-account = { version = "1.0.3", features = [
    "no-entrypoint"
] }
