[package]
name = "sunny-anchor"
version = "0.1.0"
description = "Sunny Aggregator Anchor client."
edition = "2018"
homepage = "https://arrowprotocol.com"
repository = "https://github.com/arrowprotocol/arrow"
authors = ["Oliver Queen <oliver@arrowprotocol.com>"]
license = "AGPL-3.0"
keywords = ["solana", "arrow", "quarry", "sunny", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sunny_anchor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.17.0"
anchor-spl = ">=0.17.0"
